--- a/src/colors.dtx
+++ b/src/colors.dtx
@@ -1,12 +1,12 @@
 %% Define the TU Delft house style colors.
-% source: https://www.tudelft.nl/huisstijl/kleuren
+%% source: https://www.tudelft.nl/huisstijl/kleuren
 
-% Primary colors
+%% Primary colors
 \definecolor{tudelft-cyan}{cmyk}{1,0,0,0}
 \definecolor{tudelft-black}{cmyk}{0,0,0,1}
 \definecolor{tudelft-white}{cmyk}{0,0,0,0}
 
-% Secundary / accent colors
+%% Secundary / accent colors
 \definecolor{tudelft-dark-blue}{cmyk}{1,0.52,0.06,0}
 \definecolor{tudelft-sea-green}{cmyk}{0.88,0.04,0.58,0}
 \definecolor{tudelft-turquoise}{cmyk}{0.96,0.08,0.26,0.36}
