--- a/tudelft-report.cls
+++ b/tudelft-report.cls
@@ -1,3 +1,15 @@
+%%
+%% This is file `tudelft-report.cls',
+%% generated with the docstrip utility.
+%%
+%% The original source files were:
+%%
+%% tudelft-report.dtx  (with options: `class')
+%% fonts.dtx  (with options: `class')
+%% colors.dtx  (with options: `class')
+%% cover.dtx  (with options: `class')
+%% page_style.dtx  (with options: `class')
+%% 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{tudelft-report}[2021/09/12 v0.1.0 opionated and enhanced TU Delft thesis class]
 
@@ -7,16 +19,12 @@
 \newif\if@print
 \newif\if@roman
 \@romantrue
-%\newif\if@whitetitle
-% \newif\if@whitelogo
 \DeclareOption{dutch}{\@dutchtrue\@englishfalse}
 \DeclareOption{roman}{\@romantrue}
 \DeclareOption{noroman}{\@romanfalse}
 \DeclareOption{english}{\@dutchfalse\@englishtrue}
 \DeclareOption{nativefonts}{\@nativefontstrue}
 \DeclareOption{print}{\@printtrue}
-%\DeclareOption{whitetitle}{\@whitetitletrue}
-% \DeclareOption{whitelogo}{\@whitelogotrue}
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{book}}
 \ExecuteOptions{english}
 \ProcessOptions\relax
@@ -41,7 +49,6 @@
 \RequirePackage{fancyhdr}
 \RequirePackage[flushmargin,hang]{footmisc}
 
-% LuaLaTeX fix
 \RequirePackage{iftex}
 
 \iftutex
@@ -58,7 +65,6 @@
     \fi
 
     \RequirePackage{fontspec}
-    % \RequirePackage{xltxtra} obsolete fontspec is enough
     \defaultfontfeatures{Ligatures=TeX}
 \else
     \ifpdf
@@ -72,11 +78,9 @@
     \fi
 \fi
 
-
-% microtype
 \ifxetex  % chktex 1
 \else % Only use with LuaLaTeX or PdfLaTeX
-   \RequirePackage[babel=true]{microtype}
+    \RequirePackage[babel=true]{microtype}
 \fi
 
 \RequirePackage{metalogo}
@@ -90,20 +94,17 @@
 
 \RequirePackage{changes}
 
-
-% Add nomenclature
 \RequirePackage{nomencl}
 \RequirePackage{float}
 
 \RequirePackage{siunitx}
-\RequirePackage{cleveref}
+\RequirePackage[noabbrev,capitalise]{cleveref}
 \RequirePackage{url}
 
 \RequirePackage{booktabs}
 \RequirePackage{multirow}
 
 \RequirePackage[ruled]{algorithm2e}
-
 %% Font loading
 \iftutex
     %% If the document is compiled with XeLaTeX, we load the TU Delft house
@@ -128,28 +129,27 @@
         BoldItalicFont = *_Bold_Italic]{Arial}
 \else
     \@nativefontstrue
-%    \newfontfamily\tudtitlefamily{roboto-thin}
+    %    \newfontfamily\tudtitlefamily{roboto-thin}
     \newcommand*\tudrmfamily{\rmfamily}
     \newcommand*\tudsffamily{\sffamily}
 \fi
-
 
 \if@nativefonts
     %% The native font is Utopia Regular with Fourier math. We use Latin Modern
     %% as a fallback, since Utopia lacks support for sans-serif and monospace.
     \RequirePackage[T1]{fontenc}
-%   \RequirePackage[utf8]{inputenc} No longer required with modern LaTeX
-%    \RequirePackage{lmodern}
+    %   \RequirePackage[utf8]{inputenc} No longer required with modern LaTeX
+    %    \RequirePackage{lmodern}
     \if@roman
-%      \RequirePackage{lato}
-%      \RequirePackage{helvet}
-      \RequirePackage[thin]{roboto}
-      \RequirePackage{fourier}
+        %      \RequirePackage{lato}
+        %      \RequirePackage{helvet}
+        \RequirePackage[thin]{roboto}
+        \RequirePackage{fourier}
     \else
-      \RequirePackage[thin]{roboto}
-%      \RequirePackage[default]{lato}
-      \RequirePackage{helvet}
-      \renewcommand{\familydefault}{\sfdefault}
+        \RequirePackage[thin]{roboto}
+        %      \RequirePackage[default]{lato}
+        \RequirePackage{helvet}
+        \renewcommand{\familydefault}{\sfdefault}
     \fi
     \def\largetitlefont{\fontfamily{Roboto-LF}}
     \def\largetitleseries{\fontseries{t}}
@@ -163,25 +163,25 @@
         \def\sectitlestyle{\rmfamily\titleshape\bfseries}%{\familydefault\bfseries}
         \def\chaptitlestyle{\rmfamily\titleshape}
     \else
-%        \renewcommand{\familydefault}{\tudsffamily}
-%        \def\titleshape{\fontshape{n}}
+        %        \renewcommand{\familydefault}{\tudsffamily}
+        %        \def\titleshape{\fontshape{n}}
         \def\titlefont{\fontfamily{fla}}
         \def\sectitlestyle{\sffamily\titleshape\bfseries}%        \def\sectitlestyle{\titleshape\bfseries}
         \def\chaptitlestyle{\sffamily\titleshape}
     \fi
-%    \def\largetitleshape{\upshape}
-%    \if@print
+    %    \def\largetitleshape{\upshape}
+    %    \if@print
     \def\titlestyle{\titlefont\titleshape}
-%    \else
-%        \def\titlestyle{\titlefont\titleshape}
-%        \def\sectitlestyle{\sffamily\titleshape\bfseries}
-%    \fi
-%    \def\titlestyle{\titlefont\titleshape\bfseries}
-%    \if@print
-%        \def\headerstyle{\titlefont\titleshape\bfseries}
-%    \else
-        \def\headerstyle{\titlefont}
-%    \fi
+    %    \else
+    %        \def\titlestyle{\titlefont\titleshape}
+    %        \def\sectitlestyle{\sffamily\titleshape\bfseries}
+    %    \fi
+    %    \def\titlestyle{\titlefont\titleshape\bfseries}
+    %    \if@print
+    %        \def\headerstyle{\titlefont\titleshape\bfseries}
+    %    \else
+    \def\headerstyle{\titlefont}
+    %    \fi
 \else
     %% Apart from Bookman Old Style and Arial, we use Courier New for monospace
     %% and Cambria for math.
@@ -213,7 +213,7 @@
     ]{CambriaMath}
     %% The default style for text is Tahoma (sans-serif).
     \renewcommand*\familydefault{\sfdefault}
-    %% The default style for titles is Bookman Old Style (serif). 
+    %% The default style for titles is Bookman Old Style (serif).
     \def\titlefont{\tudsffamily}
     \def\largetitlefont{\tudtitlefamily}
     \def\titleshape{}
@@ -221,34 +221,32 @@
     \def\largetitleseries{}
     \def\largetitlestyle{\largetitlefont\largetitleseries\largetitleshape}
     \def\chaptitlefamily{\tudsffamily}
-%    \if@print
-%        \def\titlestyle{\titlefont\titleshape}
-%%        \def\largetitlestyle{\largetitlefont\titleshape\bfseries}
-%        \def\sectitlestyle{\tudsffamily\titleshape\bfseries}
-%    \else
-        \def\titlestyle{\titlefont\titleshape}
-%        \def\largetitlestyle{\largetitlefont\titleshape}
-        \def\sectitlestyle{\tudsffamily\titleshape\bfseries}
-        \def\chaptitlestyle{\chaptitlefamily}
-%    \fi
+    %    \if@print
+    %        \def\titlestyle{\titlefont\titleshape}
+    %%        \def\largetitlestyle{\largetitlefont\titleshape\bfseries}
+    %        \def\sectitlestyle{\tudsffamily\titleshape\bfseries}
+    %    \else
+    \def\titlestyle{\titlefont\titleshape}
+    %        \def\largetitlestyle{\largetitlefont\titleshape}
+    \def\sectitlestyle{\tudsffamily\titleshape\bfseries}
+    \def\chaptitlestyle{\chaptitlefamily}
+    %    \fi
     \def\headerstyle{\titlestyle}
 \fi
 
-% Use roman (Georgia) in quote environment
 \renewenvironment{quote}
-               {\list{}{\rightmargin\leftmargin}\tudrmfamily\selectfont%
-                \item\relax}
-               {\endlist}
-
+{\list{}{\rightmargin\leftmargin}\tudrmfamily\selectfont%
+    \item\relax}
+{\endlist}
 %% Define the TU Delft house style colors.
-% source: https://www.tudelft.nl/huisstijl/kleuren
+%% source: https://www.tudelft.nl/huisstijl/kleuren
 
-% Primary colors
+%% Primary colors
 \definecolor{tudelft-cyan}{cmyk}{1,0,0,0}
 \definecolor{tudelft-black}{cmyk}{0,0,0,1}
 \definecolor{tudelft-white}{cmyk}{0,0,0,0}
 
-% Secundary / accent colors
+%% Secundary / accent colors
 \definecolor{tudelft-dark-blue}{cmyk}{1,0.52,0.06,0}
 \definecolor{tudelft-sea-green}{cmyk}{0.88,0.04,0.58,0}
 \definecolor{tudelft-turquoise}{cmyk}{0.96,0.08,0.26,0.36}
@@ -261,47 +259,10 @@
 \definecolor{tudelft-orange}{cmyk}{0,0.66,0.74,0}
 
 \def\@pagecolor{tudelft-cyan}
-%\if@whitetitle
-%  \def\titlecolor{tudelft-white}
-%\else   
-%  \def\titlecolor{tudelft-black}
-%\fi
 
 %% Use TU Delft cyan as the color for titles, unless the 'print' option is
 %% specified. % JMT changed this: all titles black!
-% \if@print
-    \colorlet{title}{black}
-%\else
-%    \colorlet{title}{tudelft-cyan}
-%\fi
-
-%% We use A4 paper with slightly smaller margins than the default (scale = 0.7).
-\geometry{a4paper,hscale=0.75,vscale=0.8}
-
-%% Redefine the title command to accept an optional subtitle.
-\renewcommand*\title[2][tudelft-white]{%
-%    \def\@subtitle{#1}%
-    \def\@titlecolor{#1}%
-    \def\@title{#2}%
-    %% Add the title to the PDF meta data.
-    \hypersetup{pdftitle=#2}%
-}
-\newcommand*\subtitle[2][tudelft-white]{%
-%    \def\@subtitle{#1}%
-    \def\@subtitlecolor{#1}%
-    \def\@subtitle{#2}%
-    %% Add the title to the PDF meta data.
-%    \hypersetup{pdftitle=#3}%
-}
-%% Redefine the author command to add the name to the PDF meta data.
-\renewcommand*\author[2][tudelft-white]{%
-    \def\@authorcolor{#1}%
-    \def\@author{#2}%
-    \hypersetup{pdfauthor=#2}%
-}
-%% The affiliation is shown in the blue box on the front cover.
-\newcommand*\affiliation[2][tudelft-white]{\def\@afilcolor{#1}%
-                                           \def\@affiliation{#2}}
+\colorlet{title}{black}
 %% The coverimage command is used to specify the filename of the optional cover
 %% image.
 \newcommand*\coverimage[1]{\def\@cover@image{#1}}
@@ -309,7 +270,7 @@
 %% cover. This text is inserted in a minipage environment and can therefore
 %% include line breaks.
 \newcommand\covertext[2][tudelft-white]{%
-%    \def\@subtitle{#1}%
+    %    \def\@subtitle{#1}%
     \def\@covertextcolor{#1}%
     \def\@cover@text{#2}}
 
@@ -353,8 +314,6 @@
 \define@key{cover}{spinewidth}{\setlength\@cover@spinewidth{#1}}
 \define@key{cover}{frontboxwidth}{\setlength\@cover@frontboxwidth{#1}}
 \define@key{cover}{frontboxheight}{\setlength\@cover@frontboxheight{#1}}
-%\define@key{cover}{backboxwidth}{\setlength\@cover@backboxwidth{#1}}
-%\define@key{cover}{backboxheight}{\setlength\@cover@backboxheight{#1}}
 \define@key{cover}{x}{\setlength\@cover@x{#1}}
 \define@key{cover}{y}{\setlength\@cover@y{#1}}
 \define@key{cover}{ax}{\setlength\@cover@ax{#1}}
@@ -390,50 +349,50 @@
         %% If a cover image was specified, attach it to the top right of the
         %% front cover.
         \ifx\@cover@image\undefined\else
-          \ifKV@cover@back
+            \ifKV@cover@back
             {\ifKV@cover@split
-               \node[anchor=north west,inner sep=0pt] at (current page.center) {
-               \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
+                    \node[anchor=north west,inner sep=0pt] at (current page.center) {
+                        \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
+                \else
+                    \node at (current page.north east)[anchor=north east,inner sep=0pt]{
+                        \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
+                \fi}
             \else
-               \node at (current page.north east)[anchor=north east,inner sep=0pt]{
-               \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
-            \fi}
-          \else
             {\ifKV@cover@split
-               \node[anchor=north west,inner sep=0pt] at (current page.west) {
-               \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
-            \else
-               \node at (current page.north east)[anchor=north east,inner sep=0pt]{
-               \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
-            \fi}
-          \fi
+                    \node[anchor=north west,inner sep=0pt] at (current page.west) {
+                        \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
+                \else
+                    \node at (current page.north east)[anchor=north east,inner sep=0pt]{
+                        \includegraphics[width=\@cover@imagewidth]{\@cover@image}};
+                \fi}
+        \fi
         \fi
         \ifKV@cover@whitelogo
-          \ifKV@cover@back
-              \node at (current page.south west)[anchor=south west,inner sep=20pt]{
-                  \includegraphics{cover/logo_white}
-              };
-              \node at (current page.south east)[anchor=south east,inner sep=20pt]{
-                  \includegraphics{cover/logo_white}
-              };
-          \else
-              \node at (current page.south west)[anchor=south west,inner sep=20pt]{
-                  \includegraphics{cover/logo_white}
-              };
-          \fi
+            \ifKV@cover@back
+                \node at (current page.south west)[anchor=south west,inner sep=20pt]{
+                    \includegraphics{cover/logo_white}
+                };
+                \node at (current page.south east)[anchor=south east,inner sep=20pt]{
+                    \includegraphics{cover/logo_white}
+                };
+            \else
+                \node at (current page.south west)[anchor=south west,inner sep=20pt]{
+                    \includegraphics{cover/logo_white}
+                };
+            \fi
         \else
-          \ifKV@cover@back
-              \node at (current page.south west)[anchor=south west,inner sep=20pt]{
-                  \includegraphics{cover/logo_black}
-              };
-              \node at (current page.south east)[anchor=south east,inner sep=20pt]{
-                  \includegraphics{cover/logo_black}
-              };
-          \else
-              \node at (current page.south west)[anchor=south west,inner sep=20pt]{
-                  \includegraphics{cover/logo_black}
-              };
-          \fi
+            \ifKV@cover@back
+                \node at (current page.south west)[anchor=south west,inner sep=20pt]{
+                    \includegraphics{cover/logo_black}
+                };
+                \node at (current page.south east)[anchor=south east,inner sep=20pt]{
+                    \includegraphics{cover/logo_black}
+                };
+            \else
+                \node at (current page.south west)[anchor=south west,inner sep=20pt]{
+                    \includegraphics{cover/logo_black}
+                };
+            \fi
         \fi
         %% Calculate the coordinate of the top left corner of the front cover.
         \ifKV@cover@back
@@ -447,122 +406,150 @@
             \coordinate (bottom left) at (current page.south west);
         \fi
         \ifKV@cover@back\ifKV@cover@nospine\else
-            %% If a back cover is present, calculate the coordinates of the
-            %% spine box.
-            \coordinate (spine top left) at ($(top left)-(\@cover@spinewidth,0pt)$);
-            \coordinate (spine bottom right) at ($(top left)+(0pt,-\@cover@y)$);
-            \ifKV@cover@frontbottom
-                \coordinate (spine bottom right) at ($(spine bottom right)+(0pt,\@cover@backboxheight)$);
-            \fi
-            \coordinate (spine bottom center) at ($(spine bottom right)+(-0.5\@cover@spinewidth,0pt)$);
-            %% Extend the spine box by 1pt to the left to ensure it completely
-            %% covers the cover image.
-            \coordinate (spine top left) at ($(spine top left)-(1pt,0pt)$);
-            %% Draw a black box on the spine.
-            \fill[fill=tudelft-black](spine top left) rectangle (spine bottom right);
-            %% Print the title on the center right of the spine box.
-            \node at (spine bottom center)[rotate=-90,anchor=east,inner sep=\@cover@margin]{
-                \tudsffamily\color{tudelft-white}\LARGE\@title
-            };
-        \fi\fi
+                %% If a back cover is present, calculate the coordinates of the
+                %% spine box.
+                \coordinate (spine top left) at ($(top left)-(\@cover@spinewidth,0pt)$);
+                \coordinate (spine bottom right) at ($(top left)+(0pt,-\@cover@y)$);
+                \ifKV@cover@frontbottom
+                    \coordinate (spine bottom right) at ($(spine bottom right)+(0pt,\@cover@backboxheight)$);
+                \fi
+                \coordinate (spine bottom center) at ($(spine bottom right)+(-0.5\@cover@spinewidth,0pt)$);
+                %% Extend the spine box by 1pt to the left to ensure it completely
+                %% covers the cover image.
+                \coordinate (spine top left) at ($(spine top left)-(1pt,0pt)$);
+                %% Draw a black box on the spine.
+                \fill[fill=tudelft-black](spine top left) rectangle (spine bottom right);
+                %% Print the title on the center right of the spine box.
+                \node at (spine bottom center)[rotate=-90,anchor=east,inner sep=\@cover@margin]{
+                    \tudsffamily\color{tudelft-white}\LARGE\@title
+                };
+            \fi\fi
         %% Calculate the coordinate of the corner where the front and back boxes
         %% meet.
         \ifKV@cover@split
-          \setlength\@cover@fronttextwidth{\@cover@splitboxwidth}
-          \addtolength\@cover@fronttextwidth{-2\@cover@margin}
-          \setlength\@cover@fronttextheight{\@cover@splitboxheight}
-          \addtolength\@cover@fronttextheight{-4\@cover@margin}
-          \coordinate (tcorner) at ($(top left)+(2\@cover@margin,-2\@cover@margin)$);
-          \coordinate (front top left) at (tcorner);
-%%          \coordinate (back top left) at ($(tcorner)+(-\@cover@backboxwidth,\@cover@backboxheight)$);     
-          \node at (front top left)[anchor=north west,inner sep=\@cover@margin]{
-             \begin{minipage}[t][\@cover@fronttextheight]{\@cover@fronttextwidth}
-                 %% Print the title and optional subtitle at the top in white.
-                   {\titlefont\color{\@titlecolor}\fontsize{58}{58}\selectfont\@title}
+            \setlength\@cover@fronttextwidth{\@cover@splitboxwidth}
+            \addtolength\@cover@fronttextwidth{-2\@cover@margin}
+            \setlength\@cover@fronttextheight{\@cover@splitboxheight}
+            \addtolength\@cover@fronttextheight{-4\@cover@margin}
+            \coordinate (tcorner) at ($(top left)+(2\@cover@margin,-2\@cover@margin)$);
+            \coordinate (front top left) at (tcorner);
+            %%          \coordinate (back top left) at ($(tcorner)+(-\@cover@backboxwidth,\@cover@backboxheight)$);
+            \node at (front top left)[anchor=north west,inner sep=\@cover@margin]{
+                \begin{minipage}[t][\@cover@fronttextheight]{\@cover@fronttextwidth}
+                    %% Print the title and optional subtitle at the top in white.
+                    {\titlefont\color{\@titlecolor}\fontsize{58}{58}\selectfont\@title}
                     \ifx\@subtitle\undefined\else
-%                     \\[3mm]
-                     \vfill
-                     
-                     {\titlefont\color{\@subtitlecolor}\fontsize{52}{52}\selectfont\@subtitle}
-                   \fi
-                 %% Print the author.
-                   \vfill
-                  
-                   {\titlefont\color{\@authorcolor}\fontsize{52}{52}\selectfont\@author}
-                   \ifx\@cover@text\undefined\else
-                     \vfill
-                     
-                     {\titlefont\color{\@covertextcolor}\fontsize{18}{18}\selectfont\@cover@text}
-                   \fi
-             \end{minipage}
+                        %                     \\[3mm]
+                        \vfill
+
+                        {\titlefont\color{\@subtitlecolor}\fontsize{52}{52}\selectfont\@subtitle}
+                    \fi
+                    %% Print the author.
+                    \vfill
+
+                    {\titlefont\color{\@authorcolor}\fontsize{52}{52}\selectfont\@author}
+                    \ifx\@cover@text\undefined\else
+                        \vfill
+
+                        {\titlefont\color{\@covertextcolor}\fontsize{18}{18}\selectfont\@cover@text}
+                    \fi
+                \end{minipage}
             };
         \else
-          \coordinate (tcorner) at ($(top left)+(\@cover@x,-\@cover@y)$);
-          \coordinate (acorner) at ($(top left)+(\@cover@ax,-\@cover@ay)$);
-  %        \coordinate (lcorner) at ($(bottom left)+(2cm,2cm)$);
-          %% Calculate the top left and bottom right coordinates of the front and
-          %% back boxes.
-          \ifKV@cover@frontbottom
-              \coordinate (front top left) at (tcorner);
-              \coordinate (back top left) at ($(tcorner)+(-\@cover@splitboxwidth,\@cover@splitboxheight)$);
-          \else
-              \coordinate (front top left) at ($(tcorner)+(0pt,\@cover@frontboxheight)$);
-              \coordinate (back top left) at ($(tcorner)+(-\@cover@splitboxwidth,0pt)$);
-          \fi
-          \coordinate (front bottom right) at ($(front top left)+(\@cover@frontboxwidth,-\@cover@frontboxheight)$);
-          \coordinate (back bottom right) at ($(back top left)+(\@cover@splitboxwidth,-\@cover@splitboxheight)$);
-          %% Draw the front box in black.
-  %        \fill[fill=tudelft-black](front top left) rectangle (front bottom right);
-          %% Calculate the width and height of the front text box.
-          \setlength\@cover@fronttextwidth{\@cover@frontboxwidth}
-          \addtolength\@cover@fronttextwidth{-2\@cover@margin}
-          \setlength\@cover@fronttextheight{\@cover@frontboxheight}
-          \addtolength\@cover@fronttextheight{-2\@cover@margin}
-          %% Create the front text box.
-          \node at (front top left)[anchor=north west,inner sep=\@cover@margin]{
-              \begin{minipage}[t][\@cover@fronttextheight]{\@cover@fronttextwidth}
-                  %% Print the title and optional subtitle at the top in white.
-                  {\largetitlestyle\color{\@titlecolor}\fontsize{96}{96}\selectfont\@title}
-  %                {\tudsffamily\color{\@titlecolor}\fontsize{96}{96}\selectfont\@title}
-                  \ifx\@subtitle\undefined\else
-                      \\[3mm]
-                      {\tudsffamily\color{\@subtitlecolor}\fontsize{22}{32}\selectfont\@subtitle}
-                  \fi
-                  %% Print the author at the bottom in cyan.
-                  \vfill
-  %                {\tudtitlefamily\color{\@authorcolor}\fontsize{26}{26}\selectfont\@author}
-                  {\largetitlestyle\color{\@authorcolor}\fontsize{26}{26}\selectfont\@author}
-              \end{minipage}
-          };
-          %% Draw the back box in cyan.
-  %        \fill[fill=tudelft-cyan](back top left) rectangle (back bottom right);
-          %% Print the affiliation.
-          \ifx\@affiliation\undefined\else
-  %            \node at (back bottom right)[rotate=90,anchor=south west,inner sep=\@cover@margin]{
-              \node at (acorner)[rotate=90,anchor=south west,inner sep=\@cover@margin]{
-                  \tudsffamily\color{\@afilcolor}\@affiliation
-              };
-          \fi
-%          \ifKV@cover@back\ifx\@cover@text\undefined\else
-%              %% Calculate the width and height of the back text box.
-%              \setlength\@cover@backtextwidth{\@cover@backboxwidth}
-%              \addtolength\@cover@backtextwidth{-2\@cover@margin}
-%              \setlength\@cover@backtextheight{\@cover@backboxheight}
-%              \addtolength\@cover@backtextheight{-2\@cover@margin}
-%              %% Create the back text box.
-%              \node at (back top left)[anchor=north west,inner sep=\@cover@margin]{
-%                  \begin{minipage}[t][\@cover@backtextheight]{\@cover@backtextwidth}
-%                      \tudsffamily\color{tudelft-white}\@cover@text
-%                  \end{minipage}
-%              };
-%          \fi
-         
-       \fi
+            \coordinate (tcorner) at ($(top left)+(\@cover@x,-\@cover@y)$);
+            \coordinate (acorner) at ($(top left)+(\@cover@ax,-\@cover@ay)$);
+            %        \coordinate (lcorner) at ($(bottom left)+(2cm,2cm)$);
+            %% Calculate the top left and bottom right coordinates of the front and
+            %% back boxes.
+            \ifKV@cover@frontbottom
+                \coordinate (front top left) at (tcorner);
+                \coordinate (back top left) at ($(tcorner)+(-\@cover@splitboxwidth,\@cover@splitboxheight)$);
+            \else
+                \coordinate (front top left) at ($(tcorner)+(0pt,\@cover@frontboxheight)$);
+                \coordinate (back top left) at ($(tcorner)+(-\@cover@splitboxwidth,0pt)$);
+            \fi
+            \coordinate (front bottom right) at ($(front top left)+(\@cover@frontboxwidth,-\@cover@frontboxheight)$);
+            \coordinate (back bottom right) at ($(back top left)+(\@cover@splitboxwidth,-\@cover@splitboxheight)$);
+            %% Draw the front box in black.
+            %        \fill[fill=tudelft-black](front top left) rectangle (front bottom right);
+            %% Calculate the width and height of the front text box.
+            \setlength\@cover@fronttextwidth{\@cover@frontboxwidth}
+            \addtolength\@cover@fronttextwidth{-2\@cover@margin}
+            \setlength\@cover@fronttextheight{\@cover@frontboxheight}
+            \addtolength\@cover@fronttextheight{-2\@cover@margin}
+            %% Create the front text box.
+            \node at (front top left)[anchor=north west,inner sep=\@cover@margin]{
+                \begin{minipage}[t][\@cover@fronttextheight]{\@cover@fronttextwidth}
+                    %% Print the title and optional subtitle at the top in white.
+                    {\largetitlestyle\color{\@titlecolor}\fontsize{96}{96}\selectfont\@title}
+                    %                {\tudsffamily\color{\@titlecolor}\fontsize{96}{96}\selectfont\@title}
+                    \ifx\@subtitle\undefined\else
+                        \\[3mm]
+                        {\tudsffamily\color{\@subtitlecolor}\fontsize{22}{32}\selectfont\@subtitle}
+                    \fi
+                    %% Print the author at the bottom in cyan.
+                    \vfill
+                    %                {\tudtitlefamily\color{\@authorcolor}\fontsize{26}{26}\selectfont\@author}
+                    {\largetitlestyle\color{\@authorcolor}\fontsize{26}{26}\selectfont\@author}
+                \end{minipage}
+            };
+            %% Draw the back box in cyan.
+            %        \fill[fill=tudelft-cyan](back top left) rectangle (back bottom right);
+            %% Print the affiliation.
+            \ifx\@affiliation\undefined\else
+                %            \node at (back bottom right)[rotate=90,anchor=south west,inner sep=\@cover@margin]{
+                \node at (acorner)[rotate=90,anchor=south west,inner sep=\@cover@margin]{
+                    \tudsffamily\color{\@afilcolor}\@affiliation
+                };
+            \fi
+            %          \ifKV@cover@back\ifx\@cover@text\undefined\else
+            %              %% Calculate the width and height of the back text box.
+            %              \setlength\@cover@backtextwidth{\@cover@backboxwidth}
+            %              \addtolength\@cover@backtextwidth{-2\@cover@margin}
+            %              \setlength\@cover@backtextheight{\@cover@backboxheight}
+            %              \addtolength\@cover@backtextheight{-2\@cover@margin}
+            %              %% Create the back text box.
+            %              \node at (back top left)[anchor=north west,inner sep=\@cover@margin]{
+            %                  \begin{minipage}[t][\@cover@backtextheight]{\@cover@backtextwidth}
+            %                      \tudsffamily\color{tudelft-white}\@cover@text
+            %                  \end{minipage}
+            %              };
+            %          \fi
+
+        \fi
     \end{tikzpicture}
     %% Restore the margins and turn the page white again.
     \restoregeometry
     \pagecolor{white}
 }
+
+%% We use A4 paper with slightly smaller margins than the default (scale = 0.7).
+\geometry{a4paper,hscale=0.75,vscale=0.8}
+
+%% Redefine the title command to accept an optional subtitle.
+\renewcommand*\title[2][tudelft-white]{%
+    %    \def\@subtitle{#1}%
+    \def\@titlecolor{#1}%
+    \def\@title{#2}%
+    %% Add the title to the PDF meta data.
+    \hypersetup{pdftitle=#2}%
+}
+\newcommand*\subtitle[2][tudelft-white]{%
+    %    \def\@subtitle{#1}%
+    \def\@subtitlecolor{#1}%
+    \def\@subtitle{#2}%
+    %% Add the title to the PDF meta data.
+    %    \hypersetup{pdftitle=#3}%
+}
+%% Redefine the author command to add the name to the PDF meta data.
+\renewcommand*\author[2][tudelft-white]{%
+    \def\@authorcolor{#1}%
+    \def\@author{#2}%
+    \hypersetup{pdfauthor=#2}%
+}
+%% The affiliation is shown in the blue box on the front cover.
+\newcommand*\affiliation[2][tudelft-white]{\def\@afilcolor{#1}%
+    \def\@affiliation{#2}}
 
 %% Remove the header and page number on empty pages.
 \def\cleardoublepage{%
@@ -607,11 +594,11 @@
 %% Change the headrule command (from fancyhdr.sty) to draw the line below the
 %% header in the title color.
 \renewcommand*\headrule{%
-    \if@fancyplain%
-        \let\headrulewidth\plainheadrulewidth%
-    \fi%
-    {\color{title}\hrule\@height\headrulewidth\@width\headwidth}%
-    \vskip-\headrulewidth%
+\if@fancyplain%
+    \let\headrulewidth\plainheadrulewidth%
+\fi%
+{\color{title}\hrule\@height\headrulewidth\@width\headwidth}%
+\vskip-\headrulewidth%
 }
 
 %% Draw the line above a footnote in the title color as well.
@@ -624,10 +611,10 @@
 %% A part title starts with a huge (96pt) bold black number, flushed to the
 %% right, followed by the part name on the next line in the title color.
 \titleformat{\part}[display]
-    {\flushright}
-    {\fontsize{\@largetitlesize}{\@largetitlesize}\selectfont\bfseries\thepart}
-    {0pt}
-    {\Huge\color{title}}
+{\flushright}
+{\fontsize{\@largetitlesize}{\@largetitlesize}\selectfont\bfseries\thepart}
+{0pt}
+{\Huge\color{title}}
 %% Separate the title from the text by two empty lines.
 \titlespacing{\part}{0pt}{0pt}{2\baselineskip}
 %% In the table of contents, the part name is preceded by an empty line, printed
@@ -636,10 +623,10 @@
 
 %% Chapter titles have the same layout as parts.
 \titleformat{\chapter}[display]
-    {\flushright\largetitlestyle}
-    {\fontsize{96}{96}\selectfont\thechapter}
-    {0pt}
-    {\chaptitlestyle\Huge\color{title}}
+{\flushright\largetitlestyle}
+{\fontsize{96}{96}\selectfont\thechapter}
+{0pt}
+{\chaptitlestyle\Huge\color{title}}
 \titlespacing{\chapter}{0pt}{0pt}{2\baselineskip}
 %% In the table of contents, a chapter is similar to a part, except that it is
 %% preceded by half an empty line.
@@ -648,10 +635,10 @@
 %% Section titles start with the number in bold, followed by the name printed
 %% in the title color.
 \titleformat{\section}
-    {\Large\sectitlestyle}
-    {\bfseries\thesection.\ }
-    {0pt}
-    {\color{title}}
+{\Large\sectitlestyle}
+{\bfseries\thesection.\ }
+{0pt}
+{\color{title}}
 %% Sections are preceded by an empty line.
 \titlespacing{\section}{0pt}{\baselineskip}{0pt}
 %% In the table of contents, section names are followed by a line of dots 8pt
@@ -661,20 +648,20 @@
 %% Subsection titles have the same layout as section titles, except in a smaller
 %% font.
 \titleformat{\subsection}
-    {\large\sectitlestyle}
-    {\bfseries\thesubsection.\ }
-    {0pt}
-    {\color{title}}
+{\large\sectitlestyle}
+{\bfseries\thesubsection.\ }
+{0pt}
+{\color{title}}
 \titlespacing{\subsection}{0pt}{\baselineskip}{0pt}
 \dottedcontents{subsection}[7em]{\titlefont}{3.2em}{8pt}
 
 %% Subsubsections have the same font and color as sections and subsections, but
 %% are not preceded by a number.
 \titleformat{\subsubsection}
-    {\headerstyle}
-    {}
-    {0pt}
-    {\color{title}}
+{\headerstyle}
+{}
+{0pt}
+{\color{title}}
 %% Subsubsections are preceded by an empty line and do not appear in the table
 %% of contents.
 \titlespacing{\subsubsection}{0pt}{\bigskipamount}{0pt}
@@ -686,7 +673,6 @@
 \renewcommand*\labelitemiii{\color{title}$\diamond$}
 \renewcommand*\labelitemiv{\color{title}\textperiodcentered}
 
-
 %% Hyperlinks are cyan, except in print mode, when they are all black.
 \hypersetup{
     colorlinks=true,
@@ -694,4 +680,6 @@
     linkcolor=title,
     urlcolor=title
 }
-
+\endinput
+%%
+%% End of file `tudelft-report.cls'.
